radix-transactions/tests/assets/manifest_lexer_error_unexpected_char_1.diag
error: unexpected character '%', expected digit, letter, quotation mark or one of punctuation characters '(', ')', '<', '>', ',', ';', '='
  |
3 |     "lock_fee"
4 | ;
5 | CALL_METHOD
6 |     Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
7 |     "some_method"
8 |     Decimal(%27)
  |             ^ unexpected character
9 | ;
  |